# timeslotassigner

./: .gitignore  CONTRIBUTING.md  README.md  benchmarks.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml
tests/: __init__.py  test_calendar.py  test_calendar_base.py  test_datetime_calendar.py  test_manager.py
timeslotassigner/: __init__.py  calendar.py  datetime_calendar.py  exceptions.py  manager.py
